@@ -1,3 +1,7 @@
+drkns 30.07.2020 19:00:15 +0100 - build 5647
+
+1. Уточнение 5646.
+
 drkns 29.07.2020 23:39:52 +0100 - build 5646
 
 1. Рефакторинг.
